--- a/CinemaTicketingSystem.Web/Views/Movie/Index.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Movie/Index.cshtml
@@ -1,28 +1,44 @@
 ﻿@model IEnumerable<CinemaTicketingSystem.Domain.Entities.Movie>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<h1>Movies</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Genre</th>
-            <th>Duration</th>
-            <th>Release Date</th>
-            <th>Poster</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var movie in Model)
-        {
-            <tr>
-                <td>@movie.Title</td>
-                <td>@movie.Genre</td>
-                <td>@movie.Duration</td>
-                <td>@movie.ReleaseDate</td>
-                <td><img src="@movie.Poster" alt="@movie.Title" /></td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="container my-5">
+    <h2 class="text-center mb-4">🎬 Movie List</h2>
+    <div class="table-responsive shadow-sm rounded">
+        <table class="table table-hover table-bordered align-middle text-center">
+            <thead class="table-dark">
+                <tr>
+                    <th>#</th>
+                    <th>Poster</th>
+                    <th>Title</th>
+                    <th>Genre</th>
+                    <th>Duration</th>
+                    <th>Release Date</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var movie in Model)
+                {
+                    <tr>
+                        <td>@movie.MovieId</td>
+                        <td>
+                            <img src="@movie.Poster" alt="@movie.Title Poster" class="img-thumbnail" style="width: 80px; height: 120px;">
+                        </td>
+                        <td>@movie.Title</td>
+                        <td>@movie.Genre</td>
+                        <td>@movie.Duration min</td>
+                        <td>@movie.ReleaseDate.ToShortDateString()</td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@movie.MovieId" class="btn btn-sm btn-primary">View</a>
+                            <a asp-action="Edit" asp-route-id="@movie.MovieId" class="btn btn-sm btn-warning">Edit</a>
+                            <a asp-action="Delete" asp-route-id="@movie.MovieId" class="btn btn-sm btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
