--- a/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
@@ -29,9 +29,18 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Reservation" asp-action="Index">Reservations</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
