--- a/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
+++ b/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CinemaTicketingSystem.Web
 @using CinemaTicketingSystem.Web.Models
+@using CinemaTicketingSystem.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
