--- a/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
+++ b/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CinemaTicketingSystem.Web
 @using CinemaTicketingSystem.Web.Models
 @using CinemaTicketingSystem.Web.ViewModels
+@using CinemaTicketingSystem.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
