Theatre repository, unitofwork and Theatre management added

--- a/CinemaTicketingSystem.Web/Views/Home/Index.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
             {
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-sm h-100">
-                        <img src="@theatre.ImageUrl" class="card-img-top" alt="@theatre.TheatreName" style="height: 200px; object-fit: cover;">
+                        <img src="@theatre.TheatreImage" class="card-img-top" alt="@theatre.TheatreName" style="height: 200px; object-fit: cover;">
                         <div class="card-body">
                             <h5 class="card-title">@theatre.TheatreName</h5>
                             <p class="card-text">📍 Location: @theatre.Location</p>
