--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -23,7 +23,7 @@
                 <a asp-controller="ShowTime" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">⏳ Manage ShowTimes</a>
                 <a asp-controller="Reservation" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🎟️ Manage Reservations</a>
                 <a asp-controller="Movie" asp-action="ManageMovie" class="list-group-item list-group-item-action text-white bg-dark">🎥 Manage Movies</a>
-                <a asp-controller="Theatre" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🏢 Manage Theatres</a>
+                <a asp-controller="Theatre" asp-action="ManageTheatre" class="list-group-item list-group-item-action text-white bg-dark">🏢 Manage Theatres</a>
                 <a asp-controller="User" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">👤 Manage Users</a>
                 <a asp-controller="Account" asp-action="Logout" class="list-group-item list-group-item-action text-white bg-dark">🚪 Logout</a>
             </div>
