Halls table added to db

--- a/CinemaTicketingSystem.Web/Views/Theatre/ManageTheatre.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Theatre/ManageTheatre.cshtml
@@ -28,7 +28,7 @@
                 <div class="card-header bg-success text-white">➕ Add Theatre</div>
                 <div class="card-body text-center">
                     <p>Add a new Theatre to the system.</p>
-                    <a asp-action="AddTheatre" class="btn btn-success w-100">Add Theatre</a>
+                    <a asp-action="CreateTheatre" class="btn btn-success w-100">Add Theatre</a>
                 </div>
             </div>
         </div>
