Halls and Seats now can be added to theatre. theatre can b deleted by all halls and seats

--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -63,5 +63,10 @@
             wrapper.classList.toggle('toggled');
         });
     </script>
+
+
+    @RenderSection("Scripts", required: false)
+
+
 </body>
 </html>
