Theatre Entity improved and new migration added

--- a/CinemaTicketingSystem.Web/Views/Home/Index.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                         <div class="card-body">
                             <h5 class="card-title">@theatre.TheatreName</h5>
                             <p class="card-text">📍 Location: @theatre.Location</p>
-                            <p class="card-text">💺 Total Seats: @theatre.TotalSeats</p>
+                            <p class="card-text">💺 Total Seats: repair this</p>
                         </div>
                         <div class="card-footer text-center">
                             <a asp-controller="Theatre" asp-action="Details" asp-route-id="@theatre.TheatreId" class="btn btn-primary btn-sm">View Details</a>
